add new features

--- a/README.Rmd
+++ b/README.Rmd
@@ -111,9 +111,11 @@ ggplot(shap_dep_x3, aes(x3, shap)) +
 
 You can also use `autoplot()` to construct simple plots:
 
-```{r shap-autoplot, cache=TRUE, fig.width=6, fig.asp=0.5, out.width="70%"}
+```{r shap-autoplot, cache=TRUE, fig.width=7, fig.asp=0.4, out.width="70%"}
 p1 <- autoplot(shap)
-p2 <- autoplot(shap, type = "dependence", feature = "x.3", X = X)
+p2 <- autoplot(shap, type = "dependence", feature = "x.3", X = X, alpha = 0.5,
+               color_by = "x.2", smooth = TRUE, smooth_color = "black") +
+        scale_color_viridis_c()
 gridExtra::grid.arrange(p1, p2, nrow = 1)
 ```
 
