fixes to satisfy R CMD check on CRAN

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/bgreenwell/fastshap/branch/master/graph/badge.svg)](https://codecov.io/gh/bgreenwell/fastshap?branch=master)
 <!-- badges: end -->
 
-The goal of **fastshap** is to provide an efficient way to compute the approximate Shapley values discussed in [Section 5.8.3.3 of Christoph Molnar's IML book](https://christophm.github.io/interpretable-ml-book/shapley.html). 
+The goal of **fastshap** is to provide an efficient way to compute the approximate Shapley values discussed in [Molnar (2019)](https://christophm.github.io/interpretable-ml-book/shapley.html). 
 
 ![](https://media.giphy.com/media/26AHLNr8en8J3ovOo/giphy.gif)
 
@@ -151,7 +151,7 @@ fastshap(rfo, X = X, pred_wrapper = pfun, nsim = 10, .parallel = TRUE)
 
 ## Comparison with TreeSHAP/TreeExplainer for XGBoost models
 
-You can compute the contributions of each feature for XGBoost models in an efficient way using the methods described in (Lundberg 2017). These are available through the `predict()` function for **xgboost** models; see `?xgboost::predict.xgb.Booster` for details. Below we compute the contributions for each feature using both methods and compare the results using a Shapley-based dependence plot on feature `x.3`, the results are quite surprising (__no parallel processing was used to obtain the **fastshap** results__). And remember, **fastshap** can be used with any prediction model in R. You can see the code that generated these benchmarks in the `slowtests/xgboost.R` file [here](https://github.com/bgreenwell/fastshap/blob/master/slowtests/xgboost.R).
+You can compute the contributions of each feature for XGBoost models in an efficient way using the methods described in [(Lundberg 2017)](https://arxiv.org/abs/1705.07874). These are available through the `predict()` function for **xgboost** models; see `?xgboost::predict.xgb.Booster` for details. Below we compute the contributions for each feature using both methods and compare the results using a Shapley-based dependence plot on feature `x.3`, the results are quite surprising (__no parallel processing was used to obtain the **fastshap** results__). And remember, **fastshap** can be used with any prediction model in R. 
 
 ```{r fastshap-vs-treeshap, cache=TRUE, echo=FALSE}
 # Load required packages
@@ -260,6 +260,8 @@ for (i in sample(nrow(tree_shap), size = 4)) {
 
 ## References
 
-Scott M. Lundberg, Su-In Lee, "A Unified Approach to Interpreting Model Predictions", NIPS Proceedings 2017, https://arxiv.org/abs/1705.07874
+Scott M. Lundberg, Su-In Lee, "A Unified Approach to Interpreting Model Predictions", NIPS Proceedings 2017, https://arxiv.org/abs/1705.07874.
 
-Scott M. Lundberg, Su-In Lee, "Consistent feature attribution for tree ensembles", https://arxiv.org/abs/1706.06060
+Scott M. Lundberg, Su-In Lee, "Consistent feature attribution for tree ensembles", https://arxiv.org/abs/1706.06060.
+
+Christoph Molnar, _Interpretable Machine Learning_. 2019. https://christophm.github.io/interpretable-ml- book/.
