--- a/vignettes/fastshap.Rmd
+++ b/vignettes/fastshap.Rmd
@@ -5,18 +5,15 @@ vignette: >
   %\VignetteIndexEntry{fastshap}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+bibliography: bibliography.bib
 ---
 
-```{r, include = FALSE}
+```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   cache = TRUE,
   collapse = TRUE,
   comment = "#>"
 )
-```
-
-```{r setup}
-library(fastshap)
 ```
 
 
@@ -29,11 +26,6 @@ knitr::include_graphics("basic-algorithm.png")
 ```
 
 The problem with this approach is that it requires many calls to the scoring function *f()*. In particular, if we have *N* training records and *p* features, than this algorithm would require *2mnp* calls to *f()* in order to obtain approximate Shapley values for the entire training set. The approach we take is similar, but rather than computing each Monte Carlo estimate one at a time, we construct all the data required to compute the approximate Shapley values for a single feature at once and only use two calls to *f()*. Using this approach only requires *2mp* calls to *f()* to obtain approximate Shapley values for all *p* features for the entire training set. Hence, this approach will scale better to larger training sets. Also, the data instances **b<sub>1</sub>** and **b<sub>2</sub>** are built efficiently for each row in the training set (or subset thereof) all at once and stacked on top of each other in a data frame or matrix using C++ and logical subsetting. We can also parallelize the algorithm across *m* or *p*, depending on which one is more beneficial.
-
-
-## General comments
-
-* The `explain()` function was built for efficiency column-wise (in other words, it is not currently optimized if all you need are the Shapley values for a few rows)
 
 
 ## Example
@@ -113,7 +105,7 @@ gridExtra::grid.arrange(p1, p2, nrow = 1)
 
 By default, `explain()` computes approximate Shapley values for all rows in the training data. If you want Shapley values for new instances (or a subset of the training set), they must be supplied via the `newdata` argument. This functionality is demonstrated in the code chunk below. (**Note:** `explain()` is not yet optimized for this case; that is, computing only a handful of Shapley values for a few instances (in this case, at least for now, consider using the **iml** function `Shapley()`).)
 
-```{r shap-newdata}
+```{r shap-newdata, fig.width=6, fig.asp=0.618, out.width="70%"}
 # Explanations for first observation; technically `drop = FALSE` isn't necessary 
 # here since X is a data frame
 explain(rfo, X = X, pred_wrapper = pfun, nsim = 10,
@@ -122,6 +114,10 @@ explain(rfo, X = X, pred_wrapper = pfun, nsim = 10,
 # Explanations for first three observations
 explain(rfo, X = X, feature_names = c("x.1", "x.10"), pred_wrapper = pfun, 
         nsim = 10, newdata = X[1:3, ])
+
+# Plot individual explanations
+expl <- explain(rfo, X = X,pred_wrapper = pfun, nsim = 10, newdata = X[1L, ])
+autoplot(expl, type = "contribution")
 ```
 
 
