update install instruction

--- a/README.Rmd
+++ b/README.Rmd
@@ -32,9 +32,11 @@ The goal of **fastshap** is to provide an efficient and speedy (relative to othe
 
 ## Installation
 
-You can install the development version of **fastshap** from GitHub:
-
 ``` r
+# You can install latest stable version from CRAN:
+install.packages("fastshap")
+
+# Alternatively, you can install the latest development version from GitHub:
 if (!requireNamespace("remotes")) {
   install.packages("remotes")
 }
