tweak install instructions

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,10 +33,10 @@ The goal of **fastshap** is to provide an efficient and speedy (relative to othe
 ## Installation
 
 ``` r
-# You can install latest stable version from CRAN:
+# Install the latest stable version from CRAN:
 install.packages("fastshap")
 
-# Alternatively, you can install the latest development version from GitHub:
+# Install the latest development version from GitHub:
 if (!requireNamespace("remotes")) {
   install.packages("remotes")
 }
